--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <!--/ Nav End /-->
 
   <!--/ Intro Skew Star /-->
-  <div id="home" class="intro route bg-image" style="background-image: url(img/bg-intro.jpg)">
+  <div id="home" class="intro route bg-image" style="background-image: url(/img/bg-intro.jpg)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
